<resources>
    <string name="app_name">Despesa</string>
    <string name="txtview_saldo_atual">Saldo Atual</string>
    <string name="despesa_individual">Despesa\nIndividual</string>
    <string name="despesa_compartilhada">Despesa\nCompartilhada</string>
    <string name="hint_saldo">R$ 00.00</string>
    <string name="hint_valor">00.00</string>
    <string name="valor_despesa">Valor da Despesa</string>
    <string name="r_cifrao">R$</string>
    <string name="txt_despesa">Despesa</string>
    <string name="title_activity_navigation_view">NavigationView</string>

    <!-- Menu -->
    <string name="menu_bottom_home">Princial</string>
    <string name="menu_bottom_add">Despesa</string>
    <string name="menu_bottom_friends">Amigos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>