<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cor_fundo"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:id="@+id/linearSaldo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/layout_bg_saldo"
        android:orientation="vertical"
        android:gravity="center|top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--
        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/calendar_bg"
            android:textAlignment="center" />
            -->
        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
            android:id="@+id/calendarView"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/calendar_bg"
            app:mcv_arrowColor="@color/white"
            app:mcv_calendarMode="month"
            app:mcv_headerTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:mcv_selectionColor="@color/black"
            app:mcv_tileSize="50dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_carteira"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_carteira" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtview_saldo_atual"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/txt_saldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hint_saldo"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_idividual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_user_individual" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="start">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/despesa_individual"
                        android:textAlignment="textStart"
                        android:textSize="14sp"
                        android:textColor="#292929"/>

                    <TextView
                        android:id="@+id/txt_saldoIndividual"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="#292929"
                        android:textSize="18sp"
                        android:text="R$ 00,00" />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="12dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_compartilha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_user_grupo" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="start">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/despesa_compartilhada"
                        android:textAlignment="textStart"
                        android:textColor="#292929"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt_saldoCompartilhado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="#292929"
                        android:textSize="18sp"
                        android:text="R$ 00,00" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/content_despesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearSaldo"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>